--- a/styles.css
+++ b/styles.css
@@ -9,13 +9,13 @@
 .hero-image {
   background-image: url("../img/beach.jpeg");
   height: 50%;
+  margin-bottom: 80px; 
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 150px;
   padding-bottom: 150px;
-
 }
 
 h1 {
@@ -36,7 +36,7 @@ h2 {
 h3 {
   line-height: 30px;
   margin: 0 auto;
-  padding-top: 50px;
+  padding-top: 35px;
   padding-bottom: 10px;
   width: 100%;
   font-weight: bold;
@@ -59,6 +59,13 @@ p {
   width: 50%;
   font-size: 18px;
   font-weight: lighter;
+}
+
+.drop-cap::first-letter{
+  font-size: 102px;
+  float: left;
+  padding-top: 30px;
+  border: 1px solid white;
 }
 
 #main-nav {
@@ -89,7 +96,7 @@ footer {
   text-align: center;
   margin-top: 10px;
   font-size: 15px;
-  padding-top: 30px; 
+  padding-top: 30px;
 
 }
 
